samples/_failures_safe/1761601293_bc5bc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30c3de22.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_30c3de22.c:170:9: error: expected declaration or statement at end of input
  170 |         visited[i] = 0;
      |         ^~~~~~~
./samples/SAFE/__tmp_30c3de22.c:170:9: error: expected declaration or statement at end of input
